--- a/FoodStall.html
+++ b/FoodStall.html
@@ -1,173 +1,147 @@
 <!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Food</title>
-<style>
-    .center-text {
-      text-align: center;
-      line-height:0.1;
-    }
-    h5 {
-        color: red;
-    }
-    h6 {
-        color: black;
-    }
-    .navbar {
-        overflow: hidden;
-        background-color: #333; 
-        color: black;
-        width: 100%;
-        height: 70px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-    .navbar a {
-        float: left;
-        display: block;
-        color: #f2f2f2;
-        text-align: center;
-        padding: 15px 20px;
-        text-decoration: none;
-        font-size: 18px;
-    }
-    .navbar a:hover {
-        background-color: #ddd;
-        color: black;
-        text-align: center;
-    }
-    .box1 {
-        width: 85%; 
-        height: 200px;
-        background-color: #f0f0f0; 
-        border: 1px solid #ccc; 
-        padding: 10px; 
-        text-align: center; 
-        margin: 0 auto; 
-        margin-top: 50px; 
-        border-radius: 20px; 
-        position: relative; 
-    }
-    .inner-box1 {
-        width: 30%; 
-        height: 60%; 
-        background-color: #ccc;
-        position: absolute;
-        border: 1px solid #999; 
-        top: 38%;
-        left: 10%;
-        border-radius: 20px;
-    }
-    .inner-box2 {
-        width: 30%; 
-        height: 60%;
-        background-color: #ccc;
-        position: absolute;
-        border: 1px solid #999;
-        top: 38%; 
-        left: 60%;
-        border-radius: 20px; 
-    }
-    .box2 {
-        width: 85%;        height: 200px; 
-        background-color: #f0f0f0;
-        border: 1px solid #ccc; 
-        padding: 10px; 
-        text-align: center; 
-        margin: 0 auto; 
-        margin-top: 50px; 
-        border-radius: 20px;
-        position: relative; 
-    }
-    .inner-box12 {
-        width: 30%; 
-        height: 60%; 
-        background-color: #ccc;
-        position: absolute;
-        border: 1px solid #999; 
-        top: 38%; 
-        left: 5%; 
-        border-radius: 20px; 
-    }
-    .inner-box22 {
-        width: 30%; 
-        height: 60%; 
-        background-color: #ccc;
-        position: absolute;
-        border: 1px solid #999;
-        top: 38%; 
-        left: 38%;
-        border-radius: 20px;
-    }
-    .inner-box32 {
-        width: 30%; 
-        height: 60%;
-        background-color: #ccc;
-        position: absolute;
-        border: 1px solid #999; 
-        top: 38%; 
-        left: 70%;
-        border-radius: 20px;
-    }
-    .orderNow {
-        position:absolute;
-        bottom: 10px;
-        width: 100%;
-        text-align: center; 
-    }
-    .prices {
-        position: absolute;
-        bottom: 10px;
-        width: 100%;
-        text-align: center;
-    }
-    .Specials {
-        position: absolute;
-        bottom: 10px;
-        width: 100%;
-        text-align: center;
-    }
-</style>
-</head>
-<body>
-<div class="center-text"> 
-    <h5>Online</h5>
-    <h6>FoodShop</h6>
-</div>
-<div class="navbar">
-    <div class="center-text"> 
-        <a href="home">Home</a>
-        <a href="About">About</a>
-        <a href="Menu">Menu</a>
-    </div>  
-</div>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <title>Document</title>
+    <style>
+      h1{
+        margin:0;
+  padding:0;
+      }
+        .rcorners2 {
+            border-radius: 25px;
+            border: 1px solid #222222;
+            padding: 20px; 
+            width: 100%;
+            height: 240px;  
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-direction: column;
+        }
 
-<div class="box1">
-    <div class="center-text">
-        <h5>Welcome to Online FoodShop</h5>
-        <h6>ORDER NOW</h6>
-        <div class="inner-box1">
-            <p class="prices">Prices</p>
-        </div> 
-        <div class="inner-box2">
-            <p class="Specials">Specials</p>
+        .rcorners2 .card-wrapper {
+            display: flex;
+            justify-content: space-between;
+            width: 55%;
+            margin-top: 10px;
+        }
+
+        .rcorners2 .card {
+            flex: 1; 
+            margin-right: 10px;
+            padding: 1px; 
+            width: 30%;
+            height: 120px ;
+            border-radius: 15px;
+            box-shadow: 0 0 0.7cm rgba(0, 0, 0, 0.8); 
+            margin-top: auto; 
+            text-align: center;
+        }
+
+        .card-body {
+            display: flex;
+            justify-content: center;
+            align-items: flex-end;
+            height: 100%;
+        }
+
+        .rcorners3 {
+            display: flex;
+            justify-content: space-between;
+            border-radius: 25px;
+            border: 1px solid #222222;
+            padding: 20px; 
+            width: 100%;
+            height: 240px;
+        }
+
+        .box-container {
+            display: flex;
+            justify-content: space-between;
+            margin-top: 10px;
+        }
+
+        .box {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            border-radius: 25px;
+            border: 1px solid #222222;
+            padding: 5px; 
+            width: 30%;
+            height: 200px; 
+            margin-right: 10px;
+        }
+
+        .box .order-now {
+            margin-top: auto;
+            text-align: center;
+        }
+
+        .box:last-child {
+            margin-right: 0;
+        }
+    </style>
+</head>
+
+<body>
+    <h1 align="center"><font color="red"><b>Online</b></font></h1>
+    <p align="center">FoodShop</p>
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"></a>
+          <div class="collapse navbar-collapse justify-content-center">
+            <ul class="navbar-nav ">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>  
+              <li class="nav-item">
+                <a class="nav-link" href="#">Menu</a>
+              </li>        
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact Us</a>
+              </li>
+            </ul>         
+          </div>
         </div>
-    </div>
-</div>
-<div class="box2">
-    <div class="center-text">
-        <h5>Featured Products</h5>
-        <div class="inner-box12">
-            <p class="ORDER NOW">orderNow</p>
-        </div> 
-        <div class="inner-box22">
-            <p class="ORDER NOW">orderNow</p>
-        </div> 
-        <div class="inner-box32">
-            <p class="ORDER NOW">orderNow</p>
-        </div> 
-    </div>
-</div>
+      </nav>
+      <div class="rcorners2">
+        <p align="center"><b>Welcome to Online FoodShop</b>
+          <br>
+          <b style="background-color: rgb(252, 252, 53)" align="center">Order Now</b>
+          <br>
+
+          <div class="card-wrapper">
+            <div class="card">
+              <div class="card-body"><span style="background-color: rgb(252, 252, 53)"><b>Prices</b></span></div>
+            </div>
+            <div class="card">
+              <div class="card-body"><span style="background-color: rgb(252, 252, 53)"><b>Prices</b></span></div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <p align="center"><b><font color="red">Featured Produts</font></b></p>
+      <div class="rcorners3">
+          <div class="box">
+              <div class="order-now"><span style="background-color:rgb(252, 252, 53)"><b>Order Now</b></span></div>
+          </div>
+          <div class="box">
+              <div class="order-now"><span style="background-color: rgb(252, 252, 53)"><b>Order Now</b></span></div>
+          </div>
+          <div class="box">
+              <div class="order-now"><span style="background-color:rgb(252, 252, 53)"><b>Order Now</b></span></div>
+          </div>
+      </div>
+  </div>
+
 </body>
 </html>
